# cloudLogOffline

./: .gitignore  AboutView.qml  CMakeLists.txt  Changelog.md  CloudLogOffline.pro  DrawerItem.qml  ExportView.qml  IconButton.qml  Main.qml  PageDrawer.qml  QRZView.qml  QSOItem.qml  QSOListView.qml  QSOTextField.qml  QSOView.qml  Readme.md  Settings.qml  SettingsSwitch.qml  SettingsView.qml  aboutView.qml  adiftools.cpp  adiftools.h  cabrillotools.cpp  cabrillotools.h  cloudlogmanager.cpp  cloudlogmanager.h  common.qrc  csvtools.cpp  csvtools.h  dbmanager.cpp  dbmanager.h  fdroid.sh  logtools.cpp  logtools.h  main.cpp  main.qml  migrationmanager.cpp  qml.qrc  qrzmanager.cpp  qrzmanager.h  (+14 more)
.github/: FUNDING.yml
.github/workflows/: linux.yml
android/: AndroidManifest.xml  androidshareutils.cpp  androidshareutils.h
android/src/com/lasconic/: QShareUtils.java
fastlane/metadata/android/: full_description.txt
fastlane/metadata/android/changelog/: 101.txt  102.txt  103.txt  105.txt  106.txt
fastlane/metadata/android/en-US/: full_description.txt  short_description.txt  title.txt  video.txt
fastlane/metadata/android/en-US/changelog/: 109.txt
images/macos/: logo_circle.icns
ios/: Info.plist  MyLaunch.xib  iosshareutils.h  iosshareutils.mm  myLaunchScreen.xib
ios/Media.xcassets/AppIcon.appiconset/: Contents.json
ios/Media.xcassets/logo_circle.imageset/: Contents.json
macos/: Info.plist
qml/: AboutView.qml  DatePicker.qml  DrawerItem.qml  ExportHeader.qml  ExportView.qml  IconButton.qml  Main.qml  PageDrawer.qml  QRZView.qml  QSOItem.qml  QSOListView.qml  QSOView.qml  QSOViewWrapper.qml  RepeaterItem.qml  RepeaterListView.qml  SettingsSwitch.qml  SettingsView.qml  TimePicker.qml  playground.qml
qt5/: qml.qrc
qt5/qml/: AboutView.qml  DatePicker.qml  DrawerItem.qml  ExportHeader.qml  ExportView.qml  IconButton.qml  Main.qml  PageDrawer.qml  QRZView.qml  QSOItem.qml  QSOListView.qml  QSOTextField.qml  QSOView.qml  QSOViewWrapper.qml  RepeaterItem.qml  RepeaterListView.qml  SettingsSwitch.qml  SettingsView.qml  SvgImage.qml  TimePicker.qml
src/: adiftools.cpp  adiftools.h  cabrillotools.cpp  cabrillotools.h  cacheddata.cpp  cacheddata.h  cloudlogmanager.cpp  cloudlogmanager.h  csvtools.cpp  csvtools.h  dbmanager.cpp  dbmanager.h  logtools.cpp  maidenhead.cpp  maidenhead.h  main.cpp  migrationmanager.cpp  migrationmanager.h  qrzmanager.cpp  qsomodel.cpp  qsomodel.h  repeatermodel.cpp  repeatermodel.h  rigmanager.cpp  rigmanager.h  sharemanager.cpp  sharemanager.h  shareutils.cpp  shareutils.h  tools.cpp  translationmanager.cpp  translationmanager.h  version.h.in
tests/: CMakeLists.txt  maidenhead_t.cpp
translations/: Armenian.qm  Armenian.ts  English.qm  English.ts  German.qm  German.ts
